--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <body>
     <div class="container mt-4">
 
-        <text-editor title="Custom Text Editor">
-        </text-editor>
+        <text-editor title="Custom Text Editor"></text-editor>
 
         <button class="btn btn-primary">Change Title</button>
     </div>
