--- a/index.html
+++ b/index.html
@@ -12,21 +12,12 @@
 
     <!-- Editor Component -->
     <script src="components/TextEditor.js" defer type="module"></script>
+    <script src="components/App.js" defer type="module"></script>
 
 </head>
 
 <body>
-    <div class="container mt-4">
-
-        <text-editor title="Custom Text Editor"></text-editor>
-
-
-    </div>
-
-
-    <script>
-
-    </script>
+    <my-app></my-app>
 </body>
 
 </html>
